navbar finished? logo left fixing on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,7 +35,6 @@ a {
   background-color: var(--main-color);
   color: var(--main-background);
   border: 2px solid transparent;
-  border-radius: 0px;
   font-size: 16px;
 }
 
@@ -47,9 +46,8 @@ a {
 
 .secondaryButton {
   background-color: transparent;
-  color: var(--main-background);
+  color: var(--main-color);
   border: solid 2px var(--main-color);
-  border-radius: 0px;
   font-size: 16px;
 }
 
